# Learnify

./: .gitignore  COMO_CORRER_NUEVO.txt  COMO_FUNCIONAN_LOS_FILTROS.md  DIAGRAMAS_FLUJO.md  README.md  SCRIPTS_PRUEBA.md  SETUP.md  docker-compose.yml  package-lock.json  package.json  test_learnify.py
backend/: .env.example  .gitignore  CAMBIOS_REALIZADOS.md  COMO_ASIGNAR_MODERADOR.md  COMO_CORRER_DOCKER.md  DONDE_EJECUTAR_COMANDOS.md  Dockerfile  EXPLICACION_ROLES.md  GUIA_MODERADORES.md  GUIA_RAPIDA.md  HACERTE_ADMIN.md  docker-compose.yml  init-mongo.js  main.py  pyproject.toml  requirements.txt
backend/config/: database.py  security.py  websocket_manager.py
backend/controllers/: auth.py  note.py  post.py  profile.py  study_group.py
backend/documentation/: API.md  GUIA_JWT_AUTENTICACION.md  GUIA_LEVANTAR_BD.md  GUIA_WEBSOCKETS_CHAT.md  MODULO_GRUPOS_ESTUDIO_COMPLETO.md  MODULO_NOTAS_COMPLETO.md  MODULO_PUBLICACIONES_COMPLETO.md  Notes.md  Posts.md  QUICK_REFERENCE.md  SETUP.md  StudyGroups.md
backend/models/: Post.py  User.py  UserProfile.py  note.py  post.py  study_group.py  user.py
backend/routes/: auth.py  post.py  profile.py
backend/scripts/: init_notes_likes.py
backend/services/: auth_service.py  note_service.py  post_service.py  profile_service.py  study_group_service.py
backend/utils/: auth.py  serializers.py
frontend/: .gitignore  package-lock.json  package.json
frontend/backend_documentation/: Auth.md  Profile.md  StudyGroups.md
frontend/src/app/: layout.tsx
frontend/src/components/: add-response-dialog.tsx  admin-panel.tsx  (+17 more)
(+16 files in other folders)
